# dk-academy

./: .env.example  .gitignore  README.md  pyproject.toml
dkacademy/: main.py
dkacademy/data/: interests.json  lectures.json  lessons.json  system_instruction.txt
dkacademy/models/: __init__.py  base.py  content.py  prompt.py  user.py
dkacademy/services/: content_generation.py  image_generation.py  prompt_generation.py
dkacademy/ui/: __init__.py  content.py  generation.py  interests.py  learned.py  lessons.py  login.py  topics.py
dkacademy/utils/: __init__.py  load_utils.py  model.py
tests/: test_cuda.py  test_dotenv.py  test_image_generation.py  test_models.py
